k8s/router.yaml
# k8s/router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-router
  template:
    metadata:
      labels:
        app: go-router
    spec:
      containers:
      - name: go-router
        image: go-router:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-router-svc
spec:
  type: NodePort  # 외부에서 직접 접근할 수 있게 뚫어줍니다.
  selector:
    app: go-router
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080 # 내 PC(로컬)의 30080 포트와 연결!
